--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func\n",
+    "from sqlalchemy import create_engine, func, inspect\n",
     "\n",
     "# Database Setup\n",
     "\n",
@@ -108,6 +108,57 @@
    "source": [
     "# Create our session (link) from Python to the DB\n",
     "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'id',\n",
+       "  'type': INTEGER(),\n",
+       "  'nullable': False,\n",
+       "  'default': None,\n",
+       "  'autoincrement': 'auto',\n",
+       "  'primary_key': 1},\n",
+       " {'name': 'station',\n",
+       "  'type': TEXT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': 'auto',\n",
+       "  'primary_key': 0},\n",
+       " {'name': 'date',\n",
+       "  'type': TEXT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': 'auto',\n",
+       "  'primary_key': 0},\n",
+       " {'name': 'prcp',\n",
+       "  'type': FLOAT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': 'auto',\n",
+       "  'primary_key': 0},\n",
+       " {'name': 'tobs',\n",
+       "  'type': FLOAT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': 'auto',\n",
+       "  'primary_key': 0}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "columns = inspector.get_columns('measurement')\n",
+    "columns"
    ]
   },
   {
